/*
 * Teleport
 * Copyright (C) 2024  Gravitational, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package accessgraph.v1alpha;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/gen/proto/go/accessgraph/v1alpha;accessgraphv1alpha";

// AccessPathChanged is an event that is emitted when an access path is changed.
message AccessPathChanged {
  // metadata is a common event metadata
  teleport.header.v1.Metadata metadata = 1;

  // change_id is the id of the change.
  string change_id = 2;

  // affected_resource_name is the name of the affected resource.
  string affected_resource_name = 3;

  // affected_resource_source is the source of the affected resource, ex: Teleport, AWS, GitLab, etc.
  string affected_resource_source = 4;
}
